* 2007-10-18 - manuel.kraft@open-xchange.com

   - Bugfix ID#9860 Unable to delete Contact: Context 30 Contact 2 on delete context

* 2007-10-15 - manuel.kraft@open-xchange.com
 
  - Bugfix ID#9806 [HEAD] username can't be changed
  - Bugfix ID#9805 [HEAD] No error message when username is going to be changed

* 2007-10-12 - dennis.sieben@open-xchange.com
 
  - Bugfix ID#9786 L3: IMAP port is stripped from commandline
 
* 2007-10-11 - dennis.sieben@open-xchange.com
 
  - Bugfix ID#9777 no adequate description of parameters
 
* 2007-10-10 - choeger@open-xchange.com

 - Bugfix ID#9767 [L3] changing admin password with disabled authentication does not work

* 2007-10-08 - manuel.kraft@open-xchange.com

 - Bugfix ID#9616 Deleted users are not removed from Global Addressbook in Outlook

* 2007-09-26 - choeger@open-xchange.com

  - Bugfix ID#9582 osgi/config.ini does not exist on upgrading the
  open-xchange-admin

* 2007-09-20 - dennis.sieben@open-xchange.com

  - Bugfix ID#9592 Language is not in the output of listuser --csv CLT
  
* 2007-09-11 - dennis.sieben@open-xchange.com

  - Bugfix ID#9362 <addmembers> should be <userid>
  
* 2007-09-07 - choeger@open-xchange.com

 - Bugfix #9235 Crypt implementation should be able to handle UTF-8

* 2007-09-05 - dennis.sieben@open-xchange.com

  - Bugfix ID#9254 showruntimestats gives NullPointerException
  
* 2007-08-31 - choeger@open-xchange.com

  - Bugfix ID#9156 Malformed path to HTMLEntities.properties

* 2007-08-22 - dennis.sieben@open-xchange.com

  - Bugfix ID#9023 createcontext name should be added to lmappings
  - Bugfix ID#9047 createuser not needed parameter --name
  - Bugfix ID#9046 createuser text for --extendedoptions printed on sterr
  - Bugfix ID#9034 createcontext null printed instead of cid in case of error
  - Bugfix ID#8735 Some code clean open-xchange-admin
  
* 2007-08-21 - choeger@open-xchange.com

  - Bugfix ID#8995 oxinstaller return value is always 0