@@ -1,3 +1,7 @@
+* 2007-10-23 - manuel.kraft@open-xchange.com
+
+   - Bugfix ID#9938 [HEAD] cache does not get invalidated when users are added to or removed from groups
+
 * 2007-10-18 - manuel.kraft@open-xchange.com
 
    - Bugfix ID#9860 Unable to delete Contact: Context 30 Contact 2 on delete context
